RESOLVED FIXED140367
Web Inspector: ASSERT under WebCore::InspectorResourceAgent::loadResource
https://bugs.webkit.org/show_bug.cgi?id=140367
Summary Web Inspector: ASSERT under WebCore::InspectorResourceAgent::loadResource
Joseph Pecoraro
Reported 2015-01-12 12:12:50 PST
* SUMMARY Seeing reports of an assertion in Network.loadRequest (used to load SourceMap resources). ASSERTION FAILED: m_ptr Ref.h(92) : T *WTF::Ref<Inspector::InspectorNetworkBackendDispatcherHandler::LoadResourceCallback>::operator->() [T = Inspector::InspectorNetworkBackendDispatcherHandler::LoadResourceCallback] 1 0x10dadfb40 WTFCrash 2 0x10fdd3bc5 WTF::Ref<Inspector::InspectorNetworkBackendDispatcherHandler::LoadResourceCallback>::operator->() 3 0x10fdd18f1 WebCore::InspectorResourceAgent::loadResource(WTF::String&, WTF::String const&, WTF::String const&, WTF::Ref<Inspector::InspectorNetworkBackendDispatcherHandler::LoadResourceCallback>&&) 4 0x10fdd1ad7 non-virtual thunk to WebCore::InspectorResourceAgent::loadResource(WTF::String&, WTF::String const&, WTF::String const&, WTF::Ref<Inspector::InspectorNetworkBackendDispatcherHandler::LoadResourceCallback>&&) 5 0x10d6c8b57 Inspector::InspectorNetworkBackendDispatcher::loadResource(long, Inspector::InspectorObject const&) 6 0x10d6c7580 Inspector::InspectorNetworkBackendDispatcher::dispatch(long, WTF::String const&, WTF::Ref<Inspector::InspectorObject>&&) 7 0x10d688e99 Inspector::InspectorBackendDispatcher::dispatch(WTF::String const&) 8 0x10fd13901 WebCore::InspectorController::dispatchMessageFromFrontend(WTF::String const&) 9 0x10ac01661 WebKit::WebInspector::sendMessageToBackend(WTF::String const&) 10 0x10ac0c21f void IPC::callMemberFunctionImpl<WebKit::WebInspector, void (WebKit::WebInspector::*)(WTF::String const&), std::__1::tuple<WTF::String>, 0ul>(WebKit::WebInspector*, void (WebKit::WebInspector::*)(WTF::String const&), std::__1::tuple<WTF::String>&&, std::index_sequence<0ul>) 11 0x10ac0c178 void IPC::callMemberFunction<WebKit::WebInspector, void (WebKit::WebInspector::*)(WTF::String const&), std::__1::tuple<WTF::String>, std::make_index_sequence<1ul> >(std::__1::tuple<WTF::String>&&, WebKit::WebInspector*, void (WebKit::WebInspector::*)(WTF::String const&)) * NOTES Possible reason for the crash, using a Ref after WTF::move: void InspectorResourceAgent::loadResource(ErrorString& errorString, const String& frameId, const String& urlString, Ref<LoadResourceCallback>&& callback) { ... InspectorThreadableLoaderClient* inspectorThreadableLoaderClient = new InspectorThreadableLoaderClient(WTF::move(callback)); ... if (!callback->isActive()) return; ... }
Attachments
Patch (1.80 KB, patch)
2015-01-12 12:58 PST, Brian Burg
no flags
Joseph Pecoraro
Comment 1 2015-01-12 12:13:05 PST
Brian Burg
Comment 2 2015-01-12 12:58:54 PST
Andreas Kling
Comment 3 2015-01-12 13:02:08 PST
Comment on attachment 244460 [details] Patch r=me
WebKit Commit Bot
Comment 4 2015-01-12 14:02:56 PST
Comment on attachment 244460 [details] Patch Clearing flags on attachment: 244460 Committed r178297: <http://trac.webkit.org/changeset/178297>
WebKit Commit Bot
Comment 5 2015-01-12 14:03:01 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.