Web Inspector: ASSERT under WebCore::InspectorResourceAgent::loadResource https://bugs.webkit.org/show_bug.cgi?id=140367

Reviewed by Andreas Kling.

* inspector/InspectorResourceAgent.cpp:
(WebCore::InspectorResourceAgent::loadResource): use copyRef() instead of move(),
since we check the callback after giving it to the loader client.


Canonical link: https://commits.webkit.org/158348@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@178297 268f45cc-cd09-0410-ab3c-d52691b4dbfc